[package]
name = "peapod"
version = "0.1.5"
authors = ["Felix Prasanna"]
edition = "2021"
keywords = ["data-structures", "compact", "enums", "space-efficient", "vector"]
categories = ["data-structures", "compression"]
description = "Ultra-compact storage for enums"
documentation = "https://docs.rs/peapod"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fprasx/peapod"
homepage = "https://github.com/fprasx/peapod"

[dependencies]
phenotype-internal = { version = "0.1.0", path = "phenotype-internal" }
phenotype-macro = { version = "0.1.1", path = "phenotype-macro" }

[dependencies.bitvec]
version = "1"
default-features = false
features = ["alloc"]

[workspace]
members = ["phenotype-macro", "phenotype-internal"]
