[package]
name = "phenotype-internal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Defines `Phenotype` trait for `Peapod` crate"
repository = "https://github.com/fprasx/peapod"
documentation = "https://docs.rs/peapod"
homepage = "https://github.com/fprasx/peapod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
