[package]
name = "phenotype-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
phenotype-internal = { path = "../phenotype-internal" }
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "1.0", features = ["derive", "printing"] }
proc-macro-error = "1.0"
