[package]
name = "phenotype-macro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Exports `#[derive(Phenotype)]` macro for `Peapod` crate"
repository = "https://github.com/fprasx/peapod"
homepage = "https://github.com/fprasx/peapod"

[lib]
proc-macro = true

[dependencies]
phenotype-internal = { path = "../phenotype-internal", version = "0.1.0" }
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "1.0", features = ["derive", "printing", "visit"] }
proc-macro-error = "1.0"
